# AuroraFlow

./: .gitignore  Makefile
collectives/: .gitignore  CMakeLists.txt  Makefile  chipscope.tcl  collectives.hpp  env.sh  link.cfg  link_emu.cfg  main.cpp  offload.cpp  offload.hpp  run_N2.sh  run_arc_test.py  run_hw_emu.sh  run_template.sh  test.cpp  test.hpp  xrt.ini
collectives/offload/: arc.cpp  common.hpp  offload.cpp  offload.hpp  rx.cpp  rx.hpp  tx.cpp  tx.hpp
collectives/poc/: .gitignore  Makefile  env.sh  link_simplex_u32.cfg  link_simplex_u32_emu.cfg  main.cpp  p2p_simplex.cpp  poc  run_poc.sh  run_template.sh  xrt.ini
emulation/: CMakeLists.txt
eval/: eval.ipynb  latency_tests.csv
hls/: issue.cpp
host/: Aurora.hpp  host_aurora_hls_test.cpp
scripts/: reset.sh  run_latency_test.sh  synth.sh
